# vsqz

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/scripts/: pr_review.py
.github/workflows/: ci.yml
contrib/: axolotl_integration.py  llama.cpp_vsqz.patch
tests/: benchmark_vram.py  test_converter.py  test_delta.py  test_format.py  test_galore.py  test_integrity.py  test_lisa.py  test_techniques.py  test_wrappers.py
vsqz/: __init__.py  __main__.py  adaptive_quant.py  argparse_vsqz.py  checkpoint.py  converter.py  converter_cli.py  converter_core.py  converter_delta.py  converter_io.py  converter_restore.py  deepspeed_offload.py  fp16_states.py  galore.py  gradient_delta.py  hf_plugin.py  int8_states.py  lisa.py  q_galore.py  serve.py  server.py  sparse_grad.py  stream_diff.py  vram_estimator.py  vsqz_format.py  wrapper.py
vsqz/inference/: __init__.py  kv_cache.py
